@@ -121,7 +121,9 @@
             for conversions.
             </para>
         </remarks>
-        <exception cref="T:System.ArgumentNullException">To be added; from: <see cref="M:Mono.Rocks.Either`4.A(`0)" /></exception>
+        <exception cref="T:System.ArgumentNullException">
+          <paramref name="value" /> is <see langword="null" />.
+            </exception>
       </Docs>
     </Member>
     <Member MemberName="B">
@@ -161,7 +163,9 @@
             for conversions.
             </para>
         </remarks>
-        <exception cref="T:System.ArgumentNullException">To be added; from: <see cref="M:Mono.Rocks.Either`4.B(`1)" /></exception>
+        <exception cref="T:System.ArgumentNullException">
+          <paramref name="value" /> is <see langword="null" />.
+            </exception>
       </Docs>
     </Member>
     <Member MemberName="C">
@@ -201,7 +205,9 @@
             for conversions.
             </para>
         </remarks>
-        <exception cref="T:System.ArgumentNullException">To be added; from: <see cref="M:Mono.Rocks.Either`4.C(`2)" /></exception>
+        <exception cref="T:System.ArgumentNullException">
+          <paramref name="value" /> is <see langword="null" />.
+            </exception>
       </Docs>
     </Member>
     <Member MemberName="D">
@@ -241,7 +247,9 @@
             for conversions.
             </para>
         </remarks>
-        <exception cref="T:System.ArgumentNullException">To be added; from: <see cref="M:Mono.Rocks.Either`4.D(`3)" /></exception>
+        <exception cref="T:System.ArgumentNullException">
+          <paramref name="value" /> is <see langword="null" />.
+            </exception>
       </Docs>
     </Member>
     <Member MemberName="Equals">
@@ -390,6 +398,29 @@
             <typeparamref name="TResult" />.
             </para>
         </remarks>
+        <exception cref="T:System.ArgumentNullException">
+          <para>
+            <paramref name="a" /> is <see langword="null" />.
+            </para>
+          <para>
+            -or-
+            </para>
+          <para>
+            <paramref name="b" /> is <see langword="null" />.
+            </para>
+          <para>
+            -or-
+            </para>
+          <para>
+            <paramref name="c" /> is <see langword="null" />.
+            </para>
+          <para>
+            -or-
+            </para>
+          <para>
+            <paramref name="d" /> is <see langword="null" />.
+            </para>
+        </exception>
       </Docs>
     </Member>
     <Member MemberName="GetHashCode">
